[project]
name = "reydb"
version = "1.3.38"
description = "Database method set."
readme = "README.md"
requires-python = ">=3.12"
license = {file = "LICENSE"}
keywords = ["rey", "reyxbo", "PostgreSQL", "postgres", "db", "database", "orm", "async", "asynchronous"]
authors = [
    {name = "Rey", email = "reyxbo@163.com"}
]
dependencies = [
    "asyncpg",
    "psycopg[binary]",
    "pydantic[email]",
    "reykit",
    "sqlalchemy==2.0.42",
    "sqlmodel"
]

[project.urls]
Homepage = "https://www.reyxbo.com"
Repository = "https://github.com/reyxbo/reydb-py.git"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
